--- a/src/main/webapp/WEB-INF/views/fragments/navbar.html
+++ b/src/main/webapp/WEB-INF/views/fragments/navbar.html
@@ -12,7 +12,7 @@
 <th:block th:fragment="navbar">
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="/">
+            <a class="navbar-brand fw-bold text-primary" href="/candidate/positions">
                 <i class="fas fa-briefcase me-2"></i>Job Portal
             </a>
             <div class="navbar-nav ms-auto">
