--- a/src/main/webapp/WEB-INF/views/fragments/navbar.html
+++ b/src/main/webapp/WEB-INF/views/fragments/navbar.html
@@ -16,6 +16,9 @@
                 <i class="fas fa-briefcase me-2"></i>Job Portal
             </a>
             <div class="navbar-nav ms-auto">
+                <a class="nav-link text-dark fw-500 active" href="/candidate/applications">
+                    <i class="fas fa-user me-1"></i>Hồ Sơ Ứng Tuyển
+                </a>
                 <a class="nav-link text-dark fw-500 active" href="/candidate/profile">
                     <i class="fas fa-user me-1"></i>Hồ Sơ
                 </a>
